Added index page to ease navigation of JavaScript examples/ideas/scratch pads.

--- a/c01/index.html
+++ b/c01/index.html
@@ -2,9 +2,19 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>Javascript basic implementation of fundamentals</title>
+    <link rel="stylesheet" type="text/css" href="../css/index.css" />
 </head>
 <body>
-
+    <h1 id="header"><a href="../index.html">Back to Main</a></h1>
+    <h2>Fundamentals</h2>
+    <table>
+        <tr>
+            <td>1</td>
+            <td><strong>Very basic JavaScript</strong></td>
+            <td><a href="add-content.html">add-content.html</a></td>
+            <td><a href="js/add-content.js">add-content.js</a></td>
+        </tr>
+    </table>
 </body>
 </html>
