added index to c02

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </tr>
         <tr>
             <td>2</td>
-            <td><a href="c02/numeric-variable.html">Basic JavaScript Instructions</a></td>
+            <td><a href="c02/index.html">Basic JavaScript Instructions</a></td>
         </tr>
     </table>
 </body>
